Change of color palette

--- a/denys/reservation.html
+++ b/denys/reservation.html
@@ -12,20 +12,18 @@
 </head>
 <body>
     <section class="slider">
-        <div class="container">
-            <div id="for_section1">
-                <a href="home.html">Home</a>
-                <span style="color: white;  ">Reservation</span>
-                <h1 >Make a reservation</h1>
-            </div>
+        <div class="slider-content">
+            <a href="home.html">Home</a>
+            <span style="color: white;  ">Reservation</span>
         </div>
+        <h1 >Make a reservation</h1>
     </section>
 
     <section class="reservation">
         <div class="container">
-            <h2>Make a reservation</h2>
+            <h2>Fill the form</h2>
 
-            <div class="info_box">
+            <form method="POST" class="info_box">
                 <img src="images/terasa.jpg" id="terasa_img" alt="Фотографія тераси Dolce Factory">
 
                 <div class="info_column">
@@ -44,7 +42,7 @@
                     <span>К-сть осіб</span>
                     <input type="text" class="input_class" placeholder="К-сть осіб">
                 </div>
-            </div>
+            </form>
 
         </div>
 
