--- a/Anna/index.html
+++ b/Anna/index.html
@@ -21,16 +21,16 @@
   </head>
   <body>
     <header class="header">
-      <a href="#"
-        ><img src="img/logo.png" class="logo" alt="Omnifood logo"
+      <a href="index.html"
+        ><img src="img/logo.png" class="logo" alt="Dolce FACTORY logo"
       /></a>
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
-            <a class="main-nav-link" href="/index.html">Home</a>
+            <a class="main-nav-link" href="index.html">Home</a>
           </li>
           <li>
-            <a class="main-nav-link" href="/menu.html">Menu</a>
+            <a class="main-nav-link" href="menu.html">Menu</a>
           </li>
           <li>
             <a class="main-nav-link" href="#contact">Contact</a>
@@ -57,7 +57,7 @@
     <footer class="footer">
       <div class="container grid grid--footer">
         <div class="logo-col">
-          <a href="#" class="footer-logo"
+          <a href="index.html" class="footer-logo"
             ><img src="img/logo.png" class="logo" alt="Dolce logo"
           /></a>
 
@@ -102,8 +102,8 @@
         <nav class="nav-col">
           <p class="footer-heading">Links</p>
           <ul class="footer-nav">
-            <li><a class="footer-link" href="#"> Home </a></li>
-            <li><a class="footer-link" href="#"> Menu</a></li>
+            <li><a class="footer-link" href="index.html"> Home </a></li>
+            <li><a class="footer-link" href="menu.html"> Menu</a></li>
             <li><a class="footer-link" href="#"> About us</a></li>
             <li><a class="footer-link" href="#"> Reservation </a></li>
           </ul>
