--- a/Anna/menu.html
+++ b/Anna/menu.html
@@ -10,7 +10,6 @@
     <link rel="icon" href="img/favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
-    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/queries.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,16 +22,16 @@
   </head>
   <body>
     <header class="header">
-      <a href="#"
-        ><img src="img/logo.png" class="logo" alt="Omnifood logo"
+      <a href="index.html"
+        ><img src="img/logo.png" class="logo" alt="Dolce logo"
       /></a>
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
-            <a class="main-nav-link" href="/index.html">Home</a>
+            <a class="main-nav-link" href="index.html">Home</a>
           </li>
           <li>
-            <a class="main-nav-link" href="/menu.html">Menu</a>
+            <a class="main-nav-link" href="menu.html">Menu</a>
           </li>
           <li>
             <a class="main-nav-link" href="#contact">Contact</a>
@@ -75,7 +74,7 @@
           <div class="menu-list active">
             <div class="dish">
               <div class="dish-photo">
-                <img src="/img/caesar.jpg" alt="Caesar" />
+                <img src="img/caesar.jpg" alt="Caesar" />
               </div>
               <div class="dish-description">
                 <div class="dish-name"><h3>Caesar</h3></div>
@@ -87,7 +86,7 @@
             </div>
             <div class="dish">
               <div class="dish-photo">
-                <img src="/img/salad_with_veal.jpg" alt="Salad with veal" />
+                <img src="img/salad_with_veal.jpg" alt="Salad with veal" />
               </div>
               <div class="dish-description">
                 <div class="dish-name"><h3>Salad with veal</h3></div>
@@ -99,7 +98,7 @@
             </div>
             <div class="dish">
               <div class="dish-photo">
-                <img src="/img/four_cheeses.jpg" alt="Four cheese pizza" />
+                <img src="img/four_cheeses.jpg" alt="Four cheese pizza" />
               </div>
               <div class="dish-description">
                 <div class="dish-name"><h3>Four cheese pizza</h3></div>
@@ -113,10 +112,7 @@
             </div>
             <div class="dish">
               <div class="dish-photo">
-                <img
-                  src="/img/pizza_with_shrimp.jpg"
-                  alt="Pizza with shrimps"
-                />
+                <img src="img/pizza_with_shrimp.jpg" alt="Pizza with shrimps" />
               </div>
               <div class="dish-description">
                 <div class="dish-name"><h3>Pizza with shrimps</h3></div>
@@ -129,7 +125,7 @@
             </div>
             <div class="dish">
               <div class="dish-photo">
-                <img src="/img/truffle_pasta.jpg" alt="Truffle Pasta" />
+                <img src="img/truffle_pasta.jpg" alt="Truffle Pasta" />
               </div>
               <div class="dish-description">
                 <div class="dish-name"><h3>Truffle Pasta</h3></div>
@@ -141,7 +137,7 @@
             </div>
             <div class="dish">
               <div class="dish-photo">
-                <img src="/img/pasta_carbonara.jpg" alt="Pasta Carbonara" />
+                <img src="img/pasta_carbonara.jpg" alt="Pasta Carbonara" />
               </div>
               <div class="dish-description">
                 <div class="dish-name"><h3>Pasta Carbonara</h3></div>
@@ -155,7 +151,10 @@
           <div class="menu-list unactive">
             <div class="dish">
               <div class="dish-photo">
-                <img src="/img/strawberries_in_chocolate.jpg" alt="Strawberries in chocolate" />
+                <img
+                  src="img/strawberries_in_chocolate.jpg"
+                  alt="Strawberries in chocolate"
+                />
               </div>
               <div class="dish-description">
                 <div class="dish-name"><h3>Strawberries in chocolate</h3></div>
@@ -165,6 +164,7 @@
               </div>
               <div class="price">$29</div>
             </div>
+          </div>
         </div>
       </section>
     </main>
@@ -172,7 +172,7 @@
     <footer class="footer">
       <div class="container grid grid--footer">
         <div class="logo-col">
-          <a href="#" class="footer-logo"
+          <a href="index.html" class="footer-logo"
             ><img src="img/logo.png" class="logo" alt="Dolce logo"
           /></a>
 
@@ -217,8 +217,8 @@
         <nav class="nav-col">
           <p class="footer-heading">Links</p>
           <ul class="footer-nav">
-            <li><a class="footer-link" href="#"> Home </a></li>
-            <li><a class="footer-link" href="#"> Menu</a></li>
+            <li><a class="footer-link" href="index.html"> Home </a></li>
+            <li><a class="footer-link" href="menu.html"> Menu</a></li>
             <li><a class="footer-link" href="#"> About us</a></li>
             <li><a class="footer-link" href="#"> Reservation </a></li>
           </ul>
