--- a/denys/reservation.html
+++ b/denys/reservation.html
@@ -30,17 +30,17 @@
                     <span>Ім'я</span>
                     <input type="text" class="input_class" placeholder="Ім'я">
                     <span>Номер телефону</span>
-                    <input type="text" class="input_class" placeholder="Номер телефону">
+                    <input type="tel" class="input_class" placeholder="Номер телефону">
                     <span>Час</span>
                     <input type="time" class="input_class" placeholder="Час">
                 </div>
                 <div class="info_column">
                     <span>Електронна скринька</span>
-                    <input type="text" class="input_class" placeholder="Електронна скринька">
+                    <input type="email" class="input_class" placeholder="Електронна скринька">
                     <span>Дата</span>
                     <input type="date" class="input_class" placeholder="Дата">
                     <span>К-сть осіб</span>
-                    <input type="text" class="input_class" placeholder="К-сть осіб">
+                    <input type="number" class="input_class" placeholder="К-сть осіб">
                 </div>
             </form>
 
