--- a/denys/contacts.html
+++ b/denys/contacts.html
@@ -10,7 +10,7 @@
     <section class="slider">
         <div class="slider-content">
             <a href="home.html">Home</a>
-            <span>Contact</span>
+            <span style="color: white;">Contact</span>
         </div>
         <h1>Contact us</h1>
     </section>
