Improve footer image responsiveness

--- a/denys/contacts.html
+++ b/denys/contacts.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="contact-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d427.8534810444104!2d25.034796285050405!3d48.52764650794696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4736d3b60a2453fb%3A0x307431fc57d4acef!2z0JrQsNGE0LUgItCT0LDQu9GW0YbRltGPIg!5e0!3m2!1suk!2sua!4v1696338696893!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d660.5746570299674!2d25.0350265!3d48.5275085!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4736d392c1052af1%3A0xe10e1ba64d6ede87!2sDolce%20FACTORY!5e0!3m2!1suk!2sua!4v1699281054546!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
@@ -45,12 +45,5 @@
             </div>
         </div>
     </section>
-
-    <script>
-        $(function() {
-            var img_amount = Math.floor(screen.width/300);
-            $(".row_of_pictures_img:lt(" + img_amount + ")").css("display", "inline");
-        })
-    </script>
 </body>
 </html>
