--- a/Yulia/index.html
+++ b/Yulia/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dolche FACTORY</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+  
     <section class="slider">
       <div class="links-content">
         <a href="Home.html">Home</a>
@@ -17,7 +19,7 @@
         <a href="Contact.html">Contact us</a> 
       </div>
 
-      <div class="image-slider">
+      <div class="image-slider" id="sliderText">
           <img class="top-image" src="images/pie.jpg" alt="image of bunches" >
           <img src="images/bunches.jpg" alt="tasty pie">
       </div>
@@ -29,8 +31,7 @@
     <div class="slider-button">
       <a href="Reservation.html" class="btn">Book a table</a>
     </div>
-  
-    <script src="script.js"></script>
+
     </section>
     
     <section class="information">
@@ -67,5 +68,6 @@
         </div>
       </div>
     </section>
+    <script src="js/script.js"></script>
 </body>
 </html>
