--- a/Anna/index.html
+++ b/Anna/index.html
@@ -48,10 +48,10 @@
         <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
       </button>
     </header>
+
+    <!-- Yulia's SECTION-->
     <main>
-      <section>
-        <!-- ADD ANOTHER SECTION -->
-      </section>
+      <section></section>
     </main>
 
     <footer class="footer">
@@ -80,7 +80,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; <span class="year">2023</span> by Dolce FACTORY.
+            Copyright &copy; <span class="year">${currentYear}</span> by Dolce
+            FACTORY.
             <br />
             All rights reserved.
           </p>
@@ -108,7 +109,7 @@
             <li><a class="footer-link" href="#"> Reservation </a></li>
           </ul>
         </nav>
-        <nav class="nav-col">
+        <nav class="nav-col-2">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#"> Help center </a></li>
@@ -121,6 +122,7 @@
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
+    <script defer src="js/script.js"></script>
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
