--- a/Anna/menu.html
+++ b/Anna/menu.html
@@ -70,101 +70,9 @@
               ><span>Drinks</span>
             </button>
           </div>
-
-          <div class="menu-list active">
-            <div class="dish">
-              <div class="dish-photo">
-                <img src="img/caesar.jpg" alt="Caesar" />
-              </div>
-              <div class="dish-description">
-                <div class="dish-name"><h3>Caesar</h3></div>
-                <div class="dish-ingredients">
-                  Cherry tomatoes, Parmesan, Lettuce, Chicken breast, Croutons
-                </div>
-              </div>
-              <div class="price">$29</div>
-            </div>
-            <div class="dish">
-              <div class="dish-photo">
-                <img src="img/salad_with_veal.jpg" alt="Salad with veal" />
-              </div>
-              <div class="dish-description">
-                <div class="dish-name"><h3>Salad with veal</h3></div>
-                <div class="dish-ingredients">
-                  Veal, Cucumbers, Tomatoes, Onions, Lettucee
-                </div>
-              </div>
-              <div class="price">$29</div>
-            </div>
-            <div class="dish">
-              <div class="dish-photo">
-                <img src="img/four_cheeses.jpg" alt="Four cheese pizza" />
-              </div>
-              <div class="dish-description">
-                <div class="dish-name"><h3>Four cheese pizza</h3></div>
-                <div class="dish-ingredients">
-                  Meat, Potatoes, Rice, TomatoeCreamy sauce, Mozzarella cheese,
-                  Brie cheese, Cheddar cheese, Ricotta cheese, Parmesan cheese,
-                  Truffle honey
-                </div>
-              </div>
-              <div class="price">$29</div>
-            </div>
-            <div class="dish">
-              <div class="dish-photo">
-                <img src="img/pizza_with_shrimp.jpg" alt="Pizza with shrimps" />
-              </div>
-              <div class="dish-description">
-                <div class="dish-name"><h3>Pizza with shrimps</h3></div>
-                <div class="dish-ingredients">
-                  Cauliflower, Tomatoes, Basil, Arugula, Mozzapella, Parmesan,
-                  Green Olives
-                </div>
-              </div>
-              <div class="price">$29</div>
-            </div>
-            <div class="dish">
-              <div class="dish-photo">
-                <img src="img/truffle_pasta.jpg" alt="Truffle Pasta" />
-              </div>
-              <div class="dish-description">
-                <div class="dish-name"><h3>Truffle Pasta</h3></div>
-                <div class="dish-ingredients">
-                  Tagliatelle, Truffle paste, Cream, Parmesan cheese
-                </div>
-              </div>
-              <div class="price">$29</div>
-            </div>
-            <div class="dish">
-              <div class="dish-photo">
-                <img src="img/pasta_carbonara.jpg" alt="Pasta Carbonara" />
-              </div>
-              <div class="dish-description">
-                <div class="dish-name"><h3>Pasta Carbonara</h3></div>
-                <div class="dish-ingredients">
-                  Spaghetti, Bacon, Parmesan, Cream
-                </div>
-              </div>
-              <div class="price">$29</div>
-            </div>
-          </div>
-          <div class="menu-list unactive">
-            <div class="dish">
-              <div class="dish-photo">
-                <img
-                  src="img/strawberries_in_chocolate.jpg"
-                  alt="Strawberries in chocolate"
-                />
-              </div>
-              <div class="dish-description">
-                <div class="dish-name"><h3>Strawberries in chocolate</h3></div>
-                <div class="dish-ingredients">
-                  Meat, Potatoes, Rice, Tomatoe
-                </div>
-              </div>
-              <div class="price">$29</div>
-            </div>
-          </div>
+          <div class="menu-list active main"></div>
+          <div class="menu-list unactive dessert"></div>
+          <div class="menu-list unactive drinks"></div>
         </div>
       </section>
     </main>
@@ -223,7 +131,7 @@
             <li><a class="footer-link" href="#"> Reservation </a></li>
           </ul>
         </nav>
-        <nav class="nav-col">
+        <nav class="nav-col-2">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#"> Help center </a></li>
@@ -236,6 +144,7 @@
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
+    <script defer src="js/script.js"></script>
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
